adding fix for bouncy castle sockets

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bctls-fips</artifactId>
+            <version>${bouncycastle.tls-fips.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
             <scope>test</scope>
