--- a/protobuf-types/pom.xml
+++ b/protobuf-types/pom.xml
@@ -63,6 +63,7 @@
                     <sourceDirectories>
                         <include>src/main/proto</include>
                     </sourceDirectories>
+                    <embedSourcesInClassOutputs>true</embedSourcesInClassOutputs>
                 </configuration>
 
                 <executions>
