add dek-registry module for coverage aggregation

--- a/jacoco-aggregate-schema-registry/pom.xml
+++ b/jacoco-aggregate-schema-registry/pom.xml
@@ -28,6 +28,11 @@
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
+            <artifactId>dek-registry</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
             <artifactId>kafka-schema-serializer</artifactId>
             <version>${project.version}</version>
         </dependency>
