--- a/client-encryption-aws/pom.xml
+++ b/client-encryption-aws/pom.xml
@@ -49,11 +49,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>aws-sdk</artifactId>
+            <artifactId>aws-core</artifactId>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>core-sdk</artifactId>
+            <artifactId>sdk-core</artifactId>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
