--- a/client-encryption-azure/pom.xml
+++ b/client-encryption-azure/pom.xml
@@ -10,6 +10,10 @@
         <version>8.0.0-0</version>
     </parent>
 
+    <properties>
+        <jdk.version>11</jdk.version>
+    </properties>
+
     <licenses>
         <license>
             <name>Apache License 2.0</name>
@@ -152,4 +156,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
