--- a/client-console-scripts/pom.xml
+++ b/client-console-scripts/pom.xml
@@ -10,6 +10,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         <version>8.0.0-0</version>
     </parent>
 
+    <properties>
+        <jdk.version>11</jdk.version>
+    </properties>
+
     <licenses>
         <license>
             <name>Apache License 2.0</name>
@@ -35,6 +39,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         </pluginManagement>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
