--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,6 +22,10 @@
     <packaging>jar</packaging>
     <name>kafka-schema-registry-client</name>
 
+    <properties>
+        <jdk.version>11</jdk.version>
+    </properties>
+
     <dependencies>
          <dependency>
              <groupId>org.yaml</groupId>
@@ -89,4 +93,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
