--- a/jacoco-aggregate-schema-registry/pom.xml
+++ b/jacoco-aggregate-schema-registry/pom.xml
@@ -147,6 +147,10 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
                 <!-- we do not want to create any jars for this module -->
