--- a/json-schema-converter/pom.xml
+++ b/json-schema-converter/pom.xml
@@ -8,6 +8,10 @@
         <version>8.0.0-0</version>
     </parent>
 
+    <properties>
+        <jdk.version>11</jdk.version>
+    </properties>
+
     <licenses>
         <license>
             <name>Confluent Community License</name>
@@ -79,6 +83,10 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-connect-maven-plugin</artifactId>
