--- a/json-schema-provider/pom.xml
+++ b/json-schema-provider/pom.xml
@@ -8,6 +8,10 @@
         <version>8.0.0-0</version>
     </parent>
 
+    <properties>
+        <jdk.version>11</jdk.version>
+    </properties>
+
     <licenses>
         <license>
             <name>Confluent Community License</name>
@@ -88,5 +92,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
