--- a/protobuf-serde/pom.xml
+++ b/protobuf-serde/pom.xml
@@ -22,6 +22,10 @@
     <packaging>jar</packaging>
     <name>kafka-streams-protobuf-serde</name>
 
+    <properties>
+        <jdk.version>11</jdk.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -45,5 +49,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
