--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,10 +25,10 @@ global_job_config:
     commands:
       - checkout
       - sem-version java 11
-      - export JDK_11_HOME=$(/usr/libexec/java_home -v 11)
+      # - export JDK_11_HOME=$(sem-version java 11)
       - echo "JDK_11_HOME: $JDK_11_HOME"
       - sem-version java 17
-      - export JDK_17_HOME=$(/usr/libexec/java_home -v 17)
+      # - export JDK_17_HOME=$(sem-version java 17)
       - echo "JDK_17_HOME: $JDK_17_HOME"
       - . cache-maven restore
 
