--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -40,7 +40,7 @@ blocks:
           commands:
             - . sem-pint -c
             - ci-tools ci-update-version
-            - cp .semaphore/toolchains.xml ~/.m2/toolchains.xml
+            - cp toolchains/toolchains.xml ~/.m2/toolchains.xml
             - export "JDK_11_HOME=/home/semaphore/.jenv/versions/11/bin/java"
             - export "JDK_17_HOME=/home/semaphore/.jenv/versions/17/bin/java"
             - mvn -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress clean verify install dependency:analyze validate
@@ -62,7 +62,7 @@ blocks:
           commands:
             - ci-tools ci-update-version
             - ci-tools ci-push-tag
-            - cp .semaphore/toolchains.xml ~/.m2/toolchains.xml
+            - cp toolchains/toolchains.xml ~/.m2/toolchains.xml
             - mvn -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode -DaltDeploymentRepository=confluent-codeartifact-internal::default::https://confluent-519856050701.d.codeartifact.us-west-2.amazonaws.com/maven/maven-snapshots/
               -DrepositoryId=confluent-codeartifact-internal deploy -DskipTests
   - name: CP Jar Build CI Gating
