--- a/core/pom.xml
+++ b/core/pom.xml
@@ -58,12 +58,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>${log4j2.version}</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>${log4j2.version}</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
