DGS-20245 Add minimal validation for certain KMS key IDs
KMS key ids are ultimately validated when used by the KMS client.
However, for the KMS types that we support, add some minimal validation
(such as ensuring an ARN has a correct prefix).

--- a/dek-registry-client/pom.xml
+++ b/dek-registry-client/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>tink</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
