Downgrade log4j2 bridge version to one that is compatible with slf4j 1.7.36

--- a/config/log4j2.yaml
+++ b/config/log4j2.yaml
@@ -20,7 +20,7 @@ Configuration:
         pattern: "[%d] %p %m (%c:%L)%n"
   Loggers:
     Root:
-      level: INFO
+      level: DEBUG
       AppenderRef:
         - ref: file
         - ref: stdout
