--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-slf4j-impl</artifactId>
-                <version>2.17.1</version> <!-- Works with SLF4J 1.7.x -->
+                <version>2.17.2</version> <!-- Last version compatible with SLF4J 1.7.x -->
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
