--- a/json-schema-provider/pom.xml
+++ b/json-schema-provider/pom.xml
@@ -89,4 +89,15 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release>${client.jdk.version}</release>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
