--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
         <commons.validator.version>1.9.0</commons.validator.version>
         <snappy.version>1.1.10.5</snappy.version>
         <log4j.version>2.24.3</log4j.version>
+        <client.jdk.version>11</client.jdk.version>
     </properties>
 
     <repositories>
