--- a/schema-serializer/pom.xml
+++ b/schema-serializer/pom.xml
@@ -43,4 +43,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release>${client.jdk.version}</release>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
