--- a/client/pom.xml
+++ b/client/pom.xml
@@ -96,7 +96,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>${client.jdk.version}</release>
+                    <release>${client.java.version}</release>
                 </configuration>
             </plugin>
         </plugins>
