--- a/json-schema-serde/pom.xml
+++ b/json-schema-serde/pom.xml
@@ -53,7 +53,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>${client.jdk.version}</release>
+                    <release>${client.java.version}</release>
                 </configuration>
             </plugin>
         </plugins>
