--- a/client-encryption-hcvault/pom.xml
+++ b/client-encryption-hcvault/pom.xml
@@ -22,6 +22,10 @@
     <packaging>jar</packaging>
     <name>kafka-schema-registry-client-encryption-hcvault</name>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -148,16 +152,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <release>${client.java.version}</release>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
