--- a/dek-registry-client/pom.xml
+++ b/dek-registry-client/pom.xml
@@ -26,6 +26,10 @@
     <packaging>jar</packaging>
     <name>dek-registry-client</name>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -71,16 +75,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <release>${client.java.version}</release>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
