DGS-19864: Generate Java 11 compatible class files for client modules (#3678)

--- a/dek-registry-client/pom.xml
+++ b/dek-registry-client/pom.xml
@@ -26,6 +26,10 @@
     <packaging>jar</packaging>
     <name>dek-registry-client</name>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -71,5 +75,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
