--- a/json-schema-provider/pom.xml
+++ b/json-schema-provider/pom.xml
@@ -25,6 +25,10 @@
     <packaging>jar</packaging>
     <name>kafka-json-schema-provider</name>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -88,5 +92,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
