--- a/client-encryption-tink/pom.xml
+++ b/client-encryption-tink/pom.xml
@@ -22,6 +22,10 @@
     <packaging>jar</packaging>
     <name>kafka-schema-registry-client-encryption-tink</name>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.google.crypto.tink</groupId>
@@ -44,5 +48,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
