--- a/protobuf-serde/pom.xml
+++ b/protobuf-serde/pom.xml
@@ -22,6 +22,10 @@
     <packaging>jar</packaging>
     <name>kafka-streams-protobuf-serde</name>
 
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -45,5 +49,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
