--- a/jacoco-aggregate-schema-registry/pom.xml
+++ b/jacoco-aggregate-schema-registry/pom.xml
@@ -33,6 +33,11 @@
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
+            <artifactId>dataproduct-registry</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
             <artifactId>kafka-schema-serializer</artifactId>
             <version>${project.version}</version>
         </dependency>
