--- a/package-kafka-serde-tools/pom.xml
+++ b/package-kafka-serde-tools/pom.xml
@@ -96,6 +96,11 @@
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
+            <artifactId>dataproduct-registry-client</artifactId>
+            <version>${io.confluent.schema-registry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
             <artifactId>kafka-schema-registry-client-encryption</artifactId>
             <version>${io.confluent.schema-registry.version}</version>
         </dependency>
