do not merge: local test only

--- a/config/schema-registry.properties
+++ b/config/schema-registry.properties
@@ -24,14 +24,21 @@ listeners=http://0.0.0.0:8081
 # Use this setting to specify the bootstrap servers for your Kafka cluster and it
 # will be used both for selecting the leader schema registry instance and for storing the data for
 # registered schemas.
-kafkastore.bootstrap.servers=PLAINTEXT://localhost:9092
+#kafkastore.bootstrap.servers=PLAINTEXT://localhost:9092
+kafkastore.bootstrap.servers=SASL_PLAINTEXT://localhost:9092
+kafkastore.security.protocol=SASL_PLAINTEXT
+kafkastore.sasl.mechanism=PLAIN
+kafkastore.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
+   username="owner" \
+   password="owner_password";
 
 # The name of the topic to store schemas in
 kafkastore.topic=_schemas
 
 # If true, API requests that fail will include extra debugging information, including stack traces
-debug=false
+debug=true
 
 metadata.encoder.secret=REPLACE_ME_WITH_HIGH_ENTROPY_STRING
 
-resource.extension.class=io.confluent.dekregistry.DekRegistryResourceExtension,io.confluent.dpregistry.DataProductRegistryResourceExtension
+#resource.extension.class=io.confluent.dekregistry.DekRegistryResourceExtension,io.confluent.dpregistry.DataProductRegistryResourceExtension
+resource.extension.class=io.confluent.dpregistry.DataProductRegistryResourceExtension
